@@ -232,7 +232,7 @@ fi
 # Check for errors from running the program:
 logmsg $LOG_DEBUG "checking program run exit-status"
 if grep  'timelimit exceeded' error.tmp >/dev/null 2>&1 ; then
-	echo "Timelimit exceeded." >>error.out
+	echo "Timelimit exceeded, runtime: `cat program.time`" >>error.out
 	cat error.tmp >>error.out
 	cleanexit ${E_TIMELIMIT:--1}
 fi
